# sdk-swift/EnglishBrainAPI/APIs/PurchasesAPI.swift
@@ -1,0 +1,104 @@
+//
+// PurchasesAPI.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+open class PurchasesAPI {
+
+    /**
+     Create or update subscription purchase
+     
+     - parameter purchaseRequest: (body)  
+     - parameter apiResponseQueue: The queue on which api response is dispatched.
+     - parameter completion: completion handler to receive the data and the error objects
+     */
+    @discardableResult
+    open class func createPurchase(purchaseRequest: PurchaseRequest, apiResponseQueue: DispatchQueue = EnglishBrainAPIAPI.apiResponseQueue, completion: @escaping ((_ data: Purchase?, _ error: Error?) -> Void)) -> RequestTask {
+        return createPurchaseWithRequestBuilder(purchaseRequest: purchaseRequest).execute(apiResponseQueue) { result in
+            switch result {
+            case let .success(response):
+                completion(response.body, nil)
+            case let .failure(error):
+                completion(nil, error)
+            }
+        }
+    }
+
+    /**
+     Create or update subscription purchase
+     - POST /purchases
+     - Bearer Token:
+       - type: http
+       - name: FirebaseAuth
+     - parameter purchaseRequest: (body)  
+     - returns: RequestBuilder<Purchase> 
+     */
+    open class func createPurchaseWithRequestBuilder(purchaseRequest: PurchaseRequest) -> RequestBuilder<Purchase> {
+        let localVariablePath = "/purchases"
+        let localVariableURLString = EnglishBrainAPIAPI.basePath + localVariablePath
+        let localVariableParameters = JSONEncodingHelper.encodingParameters(forEncodableObject: purchaseRequest)
+
+        let localVariableUrlComponents = URLComponents(string: localVariableURLString)
+
+        let localVariableNillableHeaders: [String: Any?] = [
+            "Content-Type": "application/json",
+        ]
+
+        let localVariableHeaderParameters = APIHelper.rejectNilHeaders(localVariableNillableHeaders)
+
+        let localVariableRequestBuilder: RequestBuilder<Purchase>.Type = EnglishBrainAPIAPI.requestBuilderFactory.getBuilder()
+
+        return localVariableRequestBuilder.init(method: "POST", URLString: (localVariableUrlComponents?.string ?? localVariableURLString), parameters: localVariableParameters, headers: localVariableHeaderParameters, requiresAuthentication: true)
+    }
+
+    /**
+     Retrieve current subscription state for user
+     
+     - parameter apiResponseQueue: The queue on which api response is dispatched.
+     - parameter completion: completion handler to receive the data and the error objects
+     */
+    @discardableResult
+    open class func getOwnPurchase(apiResponseQueue: DispatchQueue = EnglishBrainAPIAPI.apiResponseQueue, completion: @escaping ((_ data: Purchase?, _ error: Error?) -> Void)) -> RequestTask {
+        return getOwnPurchaseWithRequestBuilder().execute(apiResponseQueue) { result in
+            switch result {
+            case let .success(response):
+                completion(response.body, nil)
+            case let .failure(error):
+                completion(nil, error)
+            }
+        }
+    }
+
+    /**
+     Retrieve current subscription state for user
+     - GET /purchases/me
+     - Bearer Token:
+       - type: http
+       - name: FirebaseAuth
+     - returns: RequestBuilder<Purchase> 
+     */
+    open class func getOwnPurchaseWithRequestBuilder() -> RequestBuilder<Purchase> {
+        let localVariablePath = "/purchases/me"
+        let localVariableURLString = EnglishBrainAPIAPI.basePath + localVariablePath
+        let localVariableParameters: [String: Any]? = nil
+
+        let localVariableUrlComponents = URLComponents(string: localVariableURLString)
+
+        let localVariableNillableHeaders: [String: Any?] = [
+            :
+        ]
+
+        let localVariableHeaderParameters = APIHelper.rejectNilHeaders(localVariableNillableHeaders)
+
+        let localVariableRequestBuilder: RequestBuilder<Purchase>.Type = EnglishBrainAPIAPI.requestBuilderFactory.getBuilder()
+
+        return localVariableRequestBuilder.init(method: "GET", URLString: (localVariableUrlComponents?.string ?? localVariableURLString), parameters: localVariableParameters, headers: localVariableHeaderParameters, requiresAuthentication: true)
+    }
+}
