# sdk-swift/EnglishBrainAPI/Models/PurchaseRequest.swift
@@ -1,0 +1,57 @@
+//
+// PurchaseRequest.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+public struct PurchaseRequest: Codable, JSONEncodable, Hashable {
+
+    public enum Platform: String, Codable, CaseIterable {
+        case ios = "ios"
+        case web = "web"
+    }
+    public enum Plan: String, Codable, CaseIterable {
+        case trial = "trial"
+        case premium = "premium"
+    }
+    /** Encoded StoreKit verification token or server-side receipt proof. */
+    public var receipt: String
+    public var platform: Platform
+    public var plan: Plan?
+    public var storeTransactionId: String?
+    public var promoCode: String?
+
+    public init(receipt: String, platform: Platform, plan: Plan? = nil, storeTransactionId: String? = nil, promoCode: String? = nil) {
+        self.receipt = receipt
+        self.platform = platform
+        self.plan = plan
+        self.storeTransactionId = storeTransactionId
+        self.promoCode = promoCode
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case receipt
+        case platform
+        case plan
+        case storeTransactionId
+        case promoCode
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encode(receipt, forKey: .receipt)
+        try container.encode(platform, forKey: .platform)
+        try container.encodeIfPresent(plan, forKey: .plan)
+        try container.encodeIfPresent(storeTransactionId, forKey: .storeTransactionId)
+        try container.encodeIfPresent(promoCode, forKey: .promoCode)
+    }
+}
+
